roles/guacamole/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: guacamole
  namespace: guacamole
  labels:
    app: guacamole
  annotations:
    # the name of the nginx-ingress-controller class
    kubernetes.io/ingress.class: "nginx"
spec:
  ingressClassName: nginx  # Correct placement of ingressClassName
  rules:
    - host: iu5-s-1-0  # Correct indentation for host
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: guacamole
                port:
                  number: 8080
