roles/guacamole/templates/policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ssh
  namespace: guacamole
spec:
  podSelector:
    matchLabels:
      app: ubuntu
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: guacamole
    ports:
    - protocol: TCP
      port: 22
